clean bib and text

--- a/paper/main_wrangling.bib
+++ b/paper/main_wrangling.bib
@@ -533,6 +533,16 @@ As its coverage and comparability far exceed those of the alternatives, the SWII
 	url = {https://github.com/fsolt/DCPOtools},
 	year = {2018},
 	bdsk-url-1 = {https://github.com/fsolt/DCPOtools}}
+	
+@article{Lahti2017,
+  title={Retrieval and analysis of Eurostat open data with the eurostat package.},
+  author={Lahti, Leo and Huovari, Janne and Kainu, Markus and Biecek, Przemyslaw},
+  journal={R J.},
+  volume={9},
+  number={1},
+  pages={385},
+  year={2017}
+}
 
 @article{Troeger2019,
 	author = {Troeger, Vera},
