--- a/paper/wrangleData.qmd
+++ b/paper/wrangleData.qmd
@@ -7,6 +7,7 @@ format:
     include-in-header: 
       text: |
         \usepackage{typearea}
+
 crossref:
   sec-prefix: OSM
   sec-labels: alpha A
@@ -70,9 +71,7 @@ title: |
   | Before Harmonization
   | On 'Janitor Work' in Political Science:
 # subtitle: "Preliminary version. Do not circulate without permission."
-abstract: > 
-  This article focuses on a preliminary step in any ex-post data harmonization project—
-  wrangling the pre-harmonized data—and discusses key considerations.
+abstract: "This article focuses on a preliminary step in any ex-post data harmonization project---wrangling the pre-harmonized data---and suggests best practices for helping scholars avoid errors in this often-tedious work. To provide illustrations of these best practices, the article uses the examples of pre-harmonizing procedures used to produce the Standardized World Income Inequality Database (SWIID), a widely used database that uses Gini indices from multiple sources to create comparable estimates, and the Dynamic Comparative Public Opinion (DCPO) project, which creates a workflow for harmonizing aggregate public opinion data."
 
 keywords: 
   - Data generation process
@@ -260,7 +259,7 @@ body(small_multiple)[[19]] <- substitute(
 
 \pagebreak
 # The Problem with 'Janitor Work'
-Data harmonization projects---and a growing volume of other political science research---can be characterized as data science: they employ large quantities of data, often drawn from a large number of different sources.
+Most data harmonization projects---and a growing volume of other political science research---can be characterized as data science: they employ large quantities of data, often drawn from a large number of different sources.
 For such projects, data wrangling, the task of getting these data into the format required to perform harmonization or analysis, is notoriously the bulk of the work [see, e.g., @Lohr2014].
 Such data 'janitor work' is often viewed as tiresome, as something to be delegated to research assistants, to someone---indeed anyone---else [see @Torres2017].
 Data wrangling is, however, critically important to scientific inquiry, and errors that arise during this process can undermine our conclusions.
@@ -273,21 +272,17 @@ Rates likely go up as the tedious task goes on.
 
 Like 'janitor work' itself, data-entry errors have thus far gained little attention among political scientists.
 **The rest of this section still needs revised.**
-In this piece, we illustrate the pernicious threat this problem poses by carefully scrutinizing a prominent recent work that examines how changes in democracy affect democratic support among the public [@Claassen2020b].^[
-In this study, we leverage the case of thermostatic support for democracy to emphasize the impact of data preprocessing---a largely underexplored but critical phase in research methodology---on empirical outcomes.
-As @Weidmann2023 points out, although data collection, processing, and analyses can all influence conclusions, they follow distinct principles and require different types of action. 
-Each of them merits specific attention, especially the data processing stage, our focus here [@Weidmann2023, 4-9].
-On the impact of data analysis, see @TaiEtAl2022a, which provides an in-depth discussion on that issue in the context of a similar substantive topic.]
+In this piece, we illustrate the pernicious threat this problem poses by carefully scrutinizing a prominent recent work that examines how changes in democracy affect democratic support among the public [@Claassen2020b].
 We document the data-entry errors that slipped past both the author and the journal's strict replication policy and how these errors affect the paper's results and conclusions.
-@Claassen2020b [p. 51] concludes that when "elected leaders start dismantling democratic institutions and rights, public mood is likely to swing rapidly toward democracy again, providing something of an obstacle to democratic backsliding."
+@Claassen2020b [, 51] concludes that when "elected leaders start dismantling democratic institutions and rights, public mood is likely to swing rapidly toward democracy again, providing something of an obstacle to democratic backsliding."
 We show that, after data-entry errors are corrected, there is no empirical evidence that public support responds thermostatically to changes in democracy in this way.
 
 Before elaborating, we note that it is impossible to tell with complete certainty the exact reason for the issues we identify; it is possible that coding mistakes or even intentional decisions are at fault rather than data-entry errors strictly speaking. 
 Further, our point here is not to criticize a particular result, but to highlight a case that "reflects on typical robustness challenges" [@JanzFreese2021, 306] and so to illuminate how idiosyncratic manual data entry processes can cause problems for empirical research.
 On this basis, we conclude with four practical suggestions to help political scientists reduce data-entry errors and their impact.
-Rather than merely a single replication of a difficult-to-detect phenomenon, we hope readers will also consider this work as a contribution to the growing "open science" movement to build more reliable and transparent research both in and beyond social science [@ChristensenEtAl2019; @EngzellRohrer2021].
+Rather than merely a single replication of a difficult-to-detect phenomenon, we hope readers will also consider this work as a contribution to the growing "open science" movement to build more reliable and transparent research both in and beyond social science [@Christensen2019; @EngzellRohrer2021].
 
-# Avoiding Data Entry Errors in Income Inequality Data
+# Wrangling Income Inequality Data
 
 ```{r data-setup, include=FALSE}
 api <- c("LISSY", "CEPALStat", "OECD", "Eurostat", "Beegle et al. 2016", "Statistics Canada", "Statistics Denmark", "Statistics Finland", "CSO Ireland", "Statistics Norway", "Statistics Sweden", "World Bank Poverty & Inequality Platform", "Statbank Greenland")
@@ -316,30 +311,46 @@ automated_percent <- swiid_source %>% count(mode == "hand") %>% mutate(p = round
 
 ```
 
-The Standardized World Income Inequality Database (SWIID) is a long-running project that seeks to harmonize as much as possible income inequality statistics  for the broadest possible coverage of countries and years [@Solt2009; @Solt2016; @Solt2020].
+The Standardized World Income Inequality Database (SWIID) is a long-running project that seeks to provide harmonized inequality statistics for the broadest possible coverage of countries and years [@Solt2009; @Solt2015; @Solt2016; @Solt2020].
 As of its most recent update at the time of this writing, its source data consists of some 27,000 observations of the Gini coefficient in various countries and years, collected from over 400 separate sources including international organizations, national statistics bureaus, and academic studies.^[
 These source data can be accessed and explored graphically on the web at <https://fsolt.org/swiid/swiid_source.html>.]
 
-```{r data_by_method, echo=FALSE, fig.cap = "\\label{fig:data_by_method}Income Inequality Observations by Method of Collection"}
+```{r}
+#| label: data_by_method
+#| echo: false
+#| fig-cap: "\\label{fig:data_by_method}Income Inequality Observations by Method of Collection"
+#| fig-height: 2
+
 
 swiid_source %>% 
   count(mode) %>% 
   mutate(method = fct_recode(factor(mode), 
-                             API = "api",
-                             Spreadsheet = "sheet",
-                             Scrape = "scrape",
-                             Manual = "hand") %>% 
-           fct_relevel("API", "Spreadsheet", "Scrape", "Manual")) %>% 
-  ggplot(aes(method, n)) +
-geom_bar(stat="identity") +
-    theme_bw() +
-    theme(axis.title.x = element_blank()) +
-    ylab("Observations")
+                             "API" = "api",
+                             "Spreadsheet\nDownload" = "sheet",
+                             "Web/PDF\nScrape" = "scrape",
+                             "Hand\nEntered" = "hand") %>% 
+           fct_relevel("Hand\nEntered",
+                       "Web/PDF\nScrape",
+                       "Spreadsheet\nDownload",
+                       "API")) %>% 
+  ggplot(aes(x = n, y = method, fill = method)) +
+  geom_bar(stat="identity") +
+  theme_bw() +
+  theme(axis.title.y = element_blank()) +
+  xlab("Observations") +
+  scale_fill_manual("Legend", values = c("Hand\nEntered" = "gray75",
+                                         "Web/PDF\nScrape" = "gray10",
+                                         "Spreadsheet\nDownload" = "gray10",
+                                         "API" = "gray10")) + 
+  theme(legend.position="none")
+
+# Hand-Entered and Machine-Collected
 ```
 
-To avoid potential data-entry errors, as well as to ensure that the updates and revisions that are frequent in many of these sources are automatically incorporated as they become available, the process of collecting these source data is automated to the greatest extent practicable [@Solt2020, 1184-1185].^[
+To avoid potential data-entry errors, as well as to ensure that the updates and revisions that are frequent in many of these sources are automatically incorporated as they become available, the process of collecting the source data is automated to the greatest extent practicable [@Solt2020, 1184-1185].^[
 The R code for this automated data collection can be viewed here: <https://github.com/fsolt/swiid/blob/master/R/data_setup.R>.]
-Most international organizations and a few national statistical bureaus use application programming interfaces (APIs) that facilitate downloading their data; the R community has often built packages using these APIs to make the task even easier [see @Lahti2017;  @Wickham2017].
+
+Most international organizations and a few national statistical bureaus use application programming interfaces (APIs) that facilitate downloading their data; the R community has often built packages using these APIs to make the task even easier [see @Blondel2018; @Magnusson2014; @Lahti2017; @Lugo2017; @Wickham2018].
 The SWIID takes as much advantage of these resources as possible, as shown in Figure&nbsp;\ref{fig:data_by_method}.
 Although the sources with APIs are relatively few, they contain by far the most data: `r api_percent`% of the observations are collected in this way.
 When no API is available, the automation script downloads and reads any available spreadsheets [see @Wickham2016a].
@@ -557,9 +568,9 @@ data_comparison <- bind_rows(no_problems, year_fixes) %>%
          diff_x = round(Response - x),
          diff_samp = round(Sample - samp)) %>% 
   select(-CAbb, -COWCode)
+
+save(data_comparison, file = here::here("data", "data_comparison.rda"))
 ```
-
-
 
 ```{r}
 #| label: fig-comparison
@@ -688,23 +699,23 @@ With careful attention, not only can the threat of data-entry errors to our 'jan
 ::: {#refs-main}
 :::
 
-\pagebreak
+<!-- \pagebreak -->
 
-\hypertarget{appendix-appendix}{%
-\appendix}
+<!-- \hypertarget{appendix-appendix}{% -->
+<!-- \appendix} -->
 
-# Online Supplementary Materials {.unnumbered}
+<!-- # Online Supplementary Materials {.unnumbered} -->
 
-\setcounter{page}{1}
-\renewcommand{\thepage}{A\arabic{page}}
-\setcounter{figure}{0}
-\renewcommand{\thefigure}{A.\arabic{figure}}
-\setcounter{table}{0}
-\renewcommand{\thetable}{A.\arabic{table}}
+<!-- \setcounter{page}{1} -->
+<!-- \renewcommand{\thepage}{A\arabic{page}} -->
+<!-- \setcounter{figure}{0} -->
+<!-- \renewcommand{\thefigure}{A.\arabic{figure}} -->
+<!-- \setcounter{table}{0} -->
+<!-- \renewcommand{\thetable}{A.\arabic{table}} -->
 
-# Descriptive Statistics
+<!-- # Descriptive Statistics -->
 
-# Reference {.unnumbered}
+<!-- # Reference {.unnumbered} -->
 
-::: {#refs-appendix}
-:::
+<!-- ::: {#refs-appendix} -->
+<!-- ::: -->
