add some missing citations

--- a/paper/main_wrangling.bib
+++ b/paper/main_wrangling.bib
@@ -1,5 +1,21 @@
 
 
+@manual{Sepulveda2024,
+	author = {Mauricio Vargas Sepulveda},
+	date-added = {2025-02-07 17:47:56 -0600},
+	date-modified = {2025-02-07 17:47:56 -0600},
+	title = {tabulapdf: Extract Tables from PDF Documents},
+	year = {2024},
+	bdsk-url-1 = {https://github.com/ropensci/tabulapdf}}
+
+@unpublished{Wickham2016a,
+	author = {Wickham, Hadley},
+	date-added = {2025-02-07 17:45:37 -0600},
+	date-modified = {2025-02-07 17:45:37 -0600},
+	note = {R package version 0.3.2. \verb+https://CRAN.R-project.org/package=rvest+},
+	title = {rvest: Easily Harvest (Scrape) Web Pages},
+	year = {2016}}
+
 @article{Solt2015,
 	author = {Solt, Frederick},
 	date-added = {2025-02-07 14:46:20 -0600},
@@ -613,16 +629,6 @@ As its coverage and comparability far exceed those of the alternatives, the SWII
 	url = {https://github.com/fsolt/DCPOtools},
 	year = {2018},
 	bdsk-url-1 = {https://github.com/fsolt/DCPOtools}}
-	
-@article{Lahti2017,
-  title={Retrieval and analysis of Eurostat open data with the eurostat package.},
-  author={Lahti, Leo and Huovari, Janne and Kainu, Markus and Biecek, Przemyslaw},
-  journal={R J.},
-  volume={9},
-  number={1},
-  pages={385},
-  year={2017}
-}
 
 @article{Troeger2019,
 	author = {Troeger, Vera},
