--- a/paper/wrangleData.qmd
+++ b/paper/wrangleData.qmd
@@ -261,7 +261,7 @@ body(small_multiple)[[19]] <- substitute(
 # The Problem with 'Janitor Work'
 Most data harmonization projects---and a growing volume of other political science research---can be characterized as data science: they employ large quantities of data, often drawn from a large number of different sources.
 For such projects, data wrangling, the task of getting these data into the format required to perform harmonization or analysis, is notoriously the bulk of the work [see, e.g., @Lohr2014].
-Such data 'janitor work' is often viewed as tiresome, as something to be delegated to research assistants, to someone---indeed anyone---else [see @Torres2017].
+Such 'janitor work' is often viewed as tiresome, as something to be delegated to research assistants, to someone---indeed anyone---else [see @Torres2017].
 Data wrangling is, however, critically important to scientific inquiry, and errors that arise during this process can undermine our data-harmonization goals.
 
 One kind of data-wrangling error presents a particularly insidious problem: errors that occur during manual data entry.
@@ -269,20 +269,16 @@ Faced with the task of getting data into the correct format before harmonizing, 
 This technique may be straightforward, but it is very much prone to error.
 @Barchard2011 found that 'research assistants' assigned in an experiment to carefully enter data manually, even those instructed to double-check their entries against the original, had error rates approaching 1% in just a single roughly half-hour session.
 Rates likely go up as the tedious task goes on.
+Although the pernicious consequences of data-entry errors are easily grasped in everyday contexts---@Haegemens2019 [, 1] collects examples of misrouted financial transactions and airline flights---they have thus far gained little attention in political science, even among those working to harmonize large quantities of data.
 
-Like 'janitor work' itself, data-entry errors have thus far gained little attention among political scientists.
-**The rest of this section still needs revised.**
-In this piece, we illustrate the pernicious threat this problem poses by carefully scrutinizing a prominent recent work that examines how changes in democracy affect democratic support among the public [@Claassen2020b].
-We document the data-entry errors that slipped past both the author and the journal's strict replication policy and how these errors affect the paper's results and conclusions.
-@Claassen2020b [, 51] concludes that when "elected leaders start dismantling democratic institutions and rights, public mood is likely to swing rapidly toward democracy again, providing something of an obstacle to democratic backsliding."
-We show that, after data-entry errors are corrected, there is no empirical evidence that public support responds thermostatically to changes in democracy in this way.
+We suggest three best practices for reducing the rate of data-entry errors.
+First, _automate data entry_ to the greatest extent possible.
+Second, _use the double-entry method_: when manual data entry cannot be avoided, each entry should be made twice.
+Third, _embrace teamwork_ for any project involving entering data by hand, splitting the task up among team members will reduce the risk of errors going undetected.
+We next demonstrate the application of these practices within two ongoing harmonization efforts, the Standardized World Income Inequality Database (SWIID) and the Dynamic Comparative Public Opinion (DCPO) project.
 
-Before elaborating, we note that it is impossible to tell with complete certainty the exact reason for the issues we identify; it is possible that coding mistakes or even intentional decisions are at fault rather than data-entry errors strictly speaking. 
-Further, our point here is not to criticize a particular result, but to highlight a case that "reflects on typical robustness challenges" [@JanzFreese2021, 306] and so to illuminate how idiosyncratic manual data entry processes can cause problems for empirical research.
-On this basis, we conclude with four practical suggestions to help political scientists reduce data-entry errors and their impact.
-Rather than merely a single replication of a difficult-to-detect phenomenon, we hope readers will also consider this work as a contribution to the growing "open science" movement to build more reliable and transparent research both in and beyond social science [@Christensen2019; @EngzellRohrer2021].
 
-# Wrangling Income Inequality Data
+# Wrangling Income Inequality Data for Harmonization
 
 ```{r data-setup, include=FALSE}
 api <- c("LISSY", "CEPALStat", "OECD", "Eurostat", "Beegle et al. 2016", "Statistics Canada", "Statistics Denmark", "Statistics Finland", "CSO Ireland", "Statistics Norway", "Statistics Sweden", "World Bank Poverty & Inequality Platform", "Statbank Greenland")
@@ -311,9 +307,9 @@ automated_percent <- swiid_source %>% count(mode == "hand") %>% mutate(p = round
 
 ```
 
-The Standardized World Income Inequality Database (SWIID) is a long-running project that seeks to provide harmonized inequality statistics for the broadest possible coverage of countries and years [@Solt2009; @Solt2015; @Solt2016; @Solt2020].
-As of its most recent update at the time of this writing, its source data consists of some 27,000 observations of the Gini coefficient in various countries and years, collected from over 400 separate sources including international organizations, national statistics bureaus, and academic studies.^[
-These source data can be accessed and explored graphically on the web at <https://fsolt.org/swiid/swiid_source.html>.]
+The Standardized World Income Inequality Database (SWIID) is a long-running project that seeks to provide harmonized income inequality statistics for the broadest possible coverage of countries and years [@Solt2009; @Solt2015; @Solt2016; @Solt2020].
+As of its most recent update at the time of this writing, its source data consists of some 27,000 observations of the Gini coefficient of income distribution in nearly 200 countries over as many as 65 years, collected from over 400 separate sources including international organizations, national statistics bureaus, and academic studies.^[
+Those who are interested can access and explore these data on the web at <https://fsolt.org/swiid/swiid_source.html>.]
 
 ```{r}
 #| label: data_by_method
@@ -348,10 +344,12 @@ swiid_source %>%
 # Hand-Entered and Machine-Collected
 ```
 
-To avoid potential data-entry errors, as well as to ensure that the updates and revisions that are frequent in many of these sources are automatically incorporated as they become available, the process of collecting the source data is automated to the greatest extent practicable [@Solt2020, 1184-1185].^[
+In early versions of the SWIID, all of these source data were entered by hand, and checks of newly entered observations revealed that error rates were high.
+Moreover, many of the sources consulted frequently update or revise their figures.
+To avoid data-entry errors and ensure that updates and revisions are automatically incorporated as they become available, for the past decade the process of collecting the source data has been automated to the greatest extent practicable [@Solt2020, 1184-1185].^[
 The R code for this automated data collection can be viewed here: <https://github.com/fsolt/swiid/blob/master/R/data_setup.R>.]
 
-Most international organizations and a few national statistical bureaus use application programming interfaces (APIs) that facilitate downloading their data; the R community has often built packages using these APIs to make the task even easier [see @Blondel2018; @Magnusson2014; @Lahti2017; @Lugo2017; @Wickham2018].
+Most international organizations and a few national statistical bureaus use application programming interfaces (APIs) that facilitate automating the inclusion of their data; the R community has often built packages using these APIs to make the task even easier [see @Blondel2018; @Magnusson2014; @Lahti2017; @Lugo2017; @Wickham2018].
 The SWIID takes as much advantage of these resources as possible, as shown in Figure&nbsp;\ref{fig:data_by_method}.
 Although the sources with APIs are relatively few, they contain by far the most data: `r api_percent`% of the observations are collected in this way.
 When no API is available, the automation script downloads and reads any available spreadsheets [see @Wickham2016a].
@@ -359,18 +357,22 @@ In the absence of a spreadsheet, the process of scraping the data either directl
 Together the collection of `r automated_percent`% of the source data is scripted.
 This means not only that the possibility of errors introduced by hand entry for a vast majority of observations is eliminated but also that the updates and revisions that are frequent in these data are automatically incorporated as they become available.
 
-However, this also means that some `r 100 - automated_percent`% of the observations are entered manually in a separate spreadsheet.^[
-See <https://github.com/fsolt/swiid/blob/master/data-raw/fs_added_data.csv>.]
+However, it also means that some `r 100 - automated_percent`% of the observations are entered by hand.^[
+The resulting spreadsheet can be found at <https://github.com/fsolt/swiid/blob/master/data-raw/fs_added_data.csv>.]
 Many sources contain just a handful or fewer observations, making the payoff to the often laborious process of data cleaning too small to justify the effort.
-Some sources---including most academic articles---are behind paywalls, making reproducibility particularly challenging.^[
-When these sources contain more than a handful of observations, these are still collected using Sepulveda's -@Sepulveda2024 `tabulapdf` to avoid manual data-entry errors.]
+Some sources---including most academic articles---are behind paywalls, making automation particularly challenging.
+When these sources contain more than a handful of observations, these are still collected using Sepulveda's -@Sepulveda2024 `tabulapdf` R package to avoid data-entry errors.
 Other sources, such as many books, cannot be read directly into R.
 And finally, one source contains crucial information encoded in the typeface of its tables [see @Mitra2006, 6]; this information would be lost if the tables were read directly into R.
-All of the entries in this spreadsheet are entered twice into two separate spreadsheets, most often by two separate researchers.
-This practice allows for automated cross-checks that increase the chance that errors are identified and corrected [see @BarchardPace2011].
+All new observations are entered twice into separate spreadsheets, most often by two different researchers.
+This practice allows for automated cross-checks of the newly entered data that increase the chances that errors are identified and corrected [see @Barchard2011].
+
+The upshot the SWIID's highly automated process for collecting source data is that its harmonized estimates of income inequality are reliable, frequently updated, and employed by international organizations, central banks, and researchers working around the world.
 
 
-## Wrangling Survey Data: Data-Entry Errors and Democratic Support
+# Wrangling Survey Data for Harmonization
+
+
 
 With democracy under increasing threat in countries around the world, how the public reacts is a crucial question.
 According to a classic and still vibrant literature, growing experience with democratic governance helps generate robust public support for democracy [see, e.g., @Lipset1959a; @Welzel2013; @Wuttke2022].
@@ -388,8 +390,8 @@ Fortunately, however, the spreadsheet recording these original source data is in
 We re-collected all of the source data for the publication from the original surveys.
 We identified the variables of the survey items used by the article within each survey dataset, and then we used an automated process to collect the needed data from the survey datasets while avoiding data-entry errors [see @Solt2018].
 In @fig-comparison, we compare the percentage of respondents to give a democracy-supporting response in the hand-entered publication spreadsheet with the percentage we found using our automated process of wrangling these same data.
-<!-- When points fall along the plot's dotted line, it indicates that the publication's source data and our own automated workflow reported the same percentages. -->
-<!-- Points above this diagonal represent observations for which the publication data overestimated the actual percentage of respondents who offered a democracy-supporting response, while points below this line are observations where the publication data underestimated this percentage. -->
+When points fall along the plot's dotted line, it indicates that the publication's source data and our own automated workflow reported the same percentages.
+Points above this diagonal represent observations for which the publication data overestimated the actual percentage of respondents who offered a democracy-supporting response, while points below this line are observations where the publication data underestimated this percentage.
 
 
 ```{r}
@@ -654,7 +656,7 @@ Finally, although not depicted on this plot, data-entry errors were also evident
 This was an issue for some `r {nrow(needed)/nrow(sd) * 100} %>% round()`% of the country-year observations.
 
 
-## Discussion
+# Discussion
 
 The analysis above reveals that data-entry errors are an especially pernicious threat to the credibility of our results.
 The threat is a subtle one that is not easily detected.
@@ -662,17 +664,11 @@ To discern it requires close scrutiny of every manual entry; merely examining th
 Although failure to find support for a research hypothesis may prompt us to undertake a such a close review, an analysis that yields statistical significance is unlikely to trigger what will likely be, as in the above example, a time-consuming and difficult effort [see @Gelman2014, 464].
 These different courses put us in 'the garden of forking paths,' rendering our findings suspect even when we only ever perform a single analysis [@Gelman2014, 464].
 
-This leads us to recommend the following steps to reduce possible data-entry errors.
-First, __automate data entry__: we suggest researchers to consider reducing reliance on manual data entry and increase the extent to which data wrangling is performed computationally.
-Readers should be aware that our suggestion does *not* imply that computers are always superior to people for this purpose. 
-Instead, automated coding should always involve sensitive human design and systematic supervision [see @Breznau2021; @Grimmer2015].
-Still, given the convenience of automatic data entry in documentation and reproduction, we encourage researchers to use it as much as possible instead of entering data manually to increase the efficacy and transparency of their data processing operations.^[For a systematic discussion of the function of automated data processes in social science, see @Weidmann2023.]
-
 In making this recommendation, we are aware that being open and transparent in this way takes effort [@EngzellRohrer2021].
 But as researchers automate more of their data entry, the chances that they can reuse their code in subsequent projects improve.
 In fact, many common janitor-work chores already have been packaged as open-source software that to make researchers' task more straightforward and easier.^[
 For example, see `readtext` [@Benoit2021] for formatting text files and `DCPOtools` [@Solt2018] for aggregating cross-sectional time-series public-opinion surveys.]
-<!-- "Write code instead of working by hand," as @Christensen2019 [, 197] admonish, "don't use Microsoft Excel if it can be avoided." -->
+"Write code instead of working by hand," as @Christensen2019 [, 197] admonish, "don't use Microsoft Excel if it can be avoided."
 
 Second, __use the double-entry method__: when manual data entry cannot be avoided, each entry should be made twice.
 Double entry is labor intensive, but experiments have shown that it reduces error rates by thirty-fold even when done immediately after the initial collection and by the same person [@Barchard2011, 1837].
@@ -681,10 +677,6 @@ Given that data-entry errors can completely undermine the validity of our conclu
 Third, __embrace teamwork__: for any project involving entering data by hand, splitting the task up among team members will reduce the risk of errors going undetected.
 When double entries are performed by different people, discrepancies will be noted, discussed, and resolved correctly; having two sets of eyes on complex materials like survey codebooks also increases the chances that nuances of the presentation like survey weights will be uncovered.
 Further, by dividing the load, teamwork also lessens the probability of errors due to fatigue arising in the first place.
-
-Fourth, __be aware of the threat of data-entry error__: this final recommendation is especially for manuscript reviewers.
-If data-entry errors are invisible to the authors themselves, they are doubly so to reviewers (though if editors provided reviewers with replication materials at the time of the review it may help them to better assess the work's credibility).
-But the case described above nevertheless suggests a valuable heuristic: when a work's conclusions suggest that a difficult problem will be easily solved---that democratic erosion will reflexively trigger a backlash and a renewed public support for democracy, in the present instance---it warrants especially careful scrutiny.
 
 Data-entry errors are inevitable, and even following these recommendations is unlikely to eliminate them entirely.
 Further, the above suggestions follow closely from a specific case and, although they successfully help us identify and fix its data-entry issues, they do not constitute a panacea to cure all data-processing problems in all types of research. 
